# mapbot-py

./: .gitignore  README.md  main.py  pyproject.toml
airport_loader/: airport_loader.py  airports.csv  flightaware_operator_response.json  frontier_airports.csv  frontier_routes.json
